Bug 399599 - Hidden files retain visual cue
Summary: Hidden files retain visual cue
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 18.08.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 389270 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-10 10:56 UTC by Max Schettler
Modified: 2018-10-10 21:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Max Schettler 2018-10-10 10:56:28 UTC
Hidden files in the preview have a visual indication that they are hidden, i.e., they are slightly transparent. When a hidden file is renamed such that it's not hidden anymore, this indication remains, until, e.g., refreshing dolphin via F5.


STEPS TO REPRODUCE
0. Ensure hidden files are shown in dolphin (Ctrl+H)
1. Create a hidden file
2. Rename the file (removing the dot in front)

OBSERVED RESULT
The file retains its transparency

EXPECTED RESULT
Transparency should be removed

SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.13.5
KDE Frameworks Version: 5.50.0
Qt Version: 5.11.2
Comment 1 Julian Steinmann 2018-10-10 11:33:08 UTC
Confirmed, a rename should trigger a refresh of the visuals.
Comment 2 Thomas Surrel 2018-10-10 20:50:01 UTC
Git commit 105fe62eeb3ec3258a35400a1e6cb2901e01ac2d by Thomas Surrel.
Committed on 10/10/2018 at 20:49.
Pushed by thsurrel into branch 'master'.

Update hidden state correctly

Summary:
When renaming a file from '.hidden' to 'not_hidden', the file
would still be displayed like a hidden file with a semi-transparent
icon and a grey text.

Reviewers: #dolphin, elvisangelaccio

Reviewed By: elvisangelaccio

Subscribers: elvisangelaccio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D16115

M  +2    -2    src/kitemviews/kfileitemmodel.cpp

https://commits.kde.org/dolphin/105fe62eeb3ec3258a35400a1e6cb2901e01ac2d
Comment 3 Nate Graham 2018-10-10 21:00:07 UTC
*** Bug 389270 has been marked as a duplicate of this bug. ***
Comment 4 Thomas Surrel 2018-10-10 21:06:10 UTC
Git commit 200e0d1f07428427913bd118467909d77c14a742 by Thomas Surrel.
Committed on 10/10/2018 at 21:05.
Pushed by thsurrel into branch 'Applications/18.08'.

Update hidden state correctly

Summary:
When renaming a file from '.hidden' to 'not_hidden', the file
would still be displayed like a hidden file with a semi-transparent
icon and a grey text.

Reviewers: #dolphin, elvisangelaccio

Reviewed By: elvisangelaccio

Subscribers: elvisangelaccio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D16115

M  +2    -2    src/kitemviews/kfileitemmodel.cpp

https://commits.kde.org/dolphin/200e0d1f07428427913bd118467909d77c14a742